--- a/Makefile.in
+++ b/Makefile.in
@@ -237,7 +237,7 @@ blinkd_LDADD = -lpthread
 man_MANS = blink.1 blinkd.8
 SUBDIRS = po
 INCLUDES = -DLOCALEDIR=\"$(localedir)\"
-AM_CFLAGS = -Wall -ansi -pedantic -O2 -g
+AM_CFLAGS = -ansi -pedantic -O2 -g
 DB2MAN = http://docbook.sourceforge.net/release/xsl/current/manpages/docbook.xsl
 XP = xsltproc --nonet --novalid
 EXTRA_DIST = intltool-extract.in intltool-merge.in intltool-update.in
